<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event_overview"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_event_overview" />
        <item
            android:id="@+id/nav_event_management"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_event_management" />
        <item
            android:id="@+id/nav_participant_registration"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_participant_registration" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>